--- a/src/styles/TierListPage.css
+++ b/src/styles/TierListPage.css
@@ -105,7 +105,7 @@
 .character-condition-icon { 
     position: absolute; 
     top: 0%; 
-    right: -5px;
-    width: 30px; /* ขนาดไอคอนใหม่ */
+    right: -4px;
+    width: 30px;
     height: 30px;
 }
